fixed date input overflow issue

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -23,6 +23,10 @@
   justify-content: space-between;
 }
 
+.jc-sa {
+  justify-content: space-around;
+}
+
 // typography
 
 body {
