--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -78,26 +78,35 @@ body {
 
     width: 100%;
     margin-bottom: 4rem;
-    .seperator {
-      @media (min-width: 800px) {
-        margin: 0;
-        height: 5.7rem;
-        width: 0.2rem;
-      }
-
-      width: 80%;
-      display: block;
-      margin: 1.3rem 0;
-      height: 0.2rem;
-      background-color: $darkGray;
-    }
 
     .input-item {
+      @media (min-width: 800px) {
+        width: 25%;
+        height: 100%;
+      }
+
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin: 0 1rem;
+      width: 90%;
+
+      &:nth-child(2) {
+        @media (min-width: 800px) {
+          border-left-style: solid;
+          border-right-style: solid;
+          border-top-style: none;
+          border-bottom-style: none;
+          padding: 0;
+          margin: 0;
+        }
+
+        border: solid 3px black;
+        border-left-style: none;
+        border-right-style: none;
+        padding: 2rem 0;
+        margin: 2rem 0;
+      }
     }
 
     label {
@@ -109,41 +118,40 @@ body {
       text-align: center;
       cursor: pointer;
       width: 100%;
-    }
-
-    input[type="date"] {
-      position: relative;
-      width: 100%;
-      &::-webkit-calendar-picker-indicator {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: auto;
-        height: auto;
-        color: transparent;
-        background: transparent;
-        cursor: pointer;
-      }
-    }
-
-    .txt-input {
-      input {
-        padding: 1rem 0;
-        border: none;
-      }
-    }
-
-    .date-input {
-      @media (min-width: 800px) {
-        width: 90%;
-      }
-
-      padding: 1rem 2rem;
       border: none;
-      width: 100%;
+
+      &[type="text"] {
+        padding: 1rem 0;
+      }
+
+      &[type="date"] {
+        position: relative;
+        width: 100%;
+        padding: 1rem 0;
+        &::-webkit-calendar-picker-indicator {
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          width: auto;
+          height: auto;
+          color: transparent;
+          background: transparent;
+          cursor: pointer;
+        }
+      }
     }
+
+    // .date-input {
+    //   @media (min-width: 800px) {
+    //     width: 90%;
+    //   }
+
+    //   padding: 1rem 2rem;
+    //   border: none;
+    //   width: 100%;
+    // }
   }
 
   .button {
